# HacksGiving-2024

./: .deepsource.toml
Aha/: Aha.sln
Aha/Aha/: Aha.csproj  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  LocationContexts.csv  MauiProgram.cs
Aha/Aha/Models/: BLEDeviceDetector.cs  LocationContext.cs  LocationContextManager.cs  Message.cs  UserContext.cs  WebRelayService.cs
Aha/Aha/Resources/: AppResources.en-US.resx  AppResources.resx
Aha/Aha/Resources/Localization/: AppResources.Designer.cs  AppResources.en-US.resx  AppResources.es-ES.resx  AppResources.fr-FR.resx  AppResources.resx
Aha/Aha/ViewModels/: AbstractViewModel.cs  BLEDectectionViewModel.cs  ChatViewModel.cs  ContextQuizViewModel.cs
Aha/Aha/Views/: AIAssistant.xaml  AIAssistant.xaml.cs  BLEDetect.xaml  BLEDetect.xaml.cs  Chat.xaml  Chat.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Settings.xaml  Settings.xaml.cs  Website.xaml  Website.xaml.cs
Aha/Aha/Views/InitialContextQuiz/: Q1.xaml  Q1.xaml.cs  Q2.xaml  Q2.xaml.cs  Q3.xaml  Q3.xaml.cs  QInitial.xaml  QInitial.xaml.cs
AhaAPI/: .gitignore  AhaAPI.yaml  chat.py  connection_manager.py  knowledge_loading.py  main.py  pyproject.toml  socket-test.html  user.py
Esp32BLELocationContextBeacons/Beacon/: Beacon.ino
data/: .gitignore
data-science/: llm-rosie-workshop.ipynb
data/provided/: Exhibit_Master_List.xlsx
